chgmgmt_build/src/objects/Interview__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>応募</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>面接</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>面接官1</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>面接</relationshipLabel>
        <relationshipName>mensetu1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>面接官３</label>
        <referenceTo>User</referenceTo>
        <relationshipName>rInterviewer3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanStartTime__c</fullName>
        <label>予定日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>実施日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>日程調整中</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>実施待ち</fullName>
                </value>
                <value>
                    <fullName>合格</fullName>
                </value>
                <value>
                    <fullName>不合格</fullName>
                </value>
                <value>
                    <fullName>キャンセル</fullName>
                </value>
                <value>
                    <fullName>辞退</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>会場</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>本社</fullName>
                </value>
                <value>
                    <fullName>シンフォニービル</fullName>
                </value>
                <value>
                    <fullName>Aホール</fullName>
                </value>
                <value>
                    <fullName>Bホール</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>assessid__c</fullName>
        <label>assessid</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mensetu2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>面接官2</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>面接 (面接官2)</relationshipLabel>
        <relationshipName>mensetu2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>面接</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Venue__c</columns>
        <columns>PlanStartTime__c</columns>
        <columns>Status__c</columns>
        <columns>Interviewer3__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>面接名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>